<resources>
    <string name="app_name">Gymnastics App</string>

    <string name="title">Gymnastics App</string>
    <string name="score">Score: </string>
    <string name="element">Element: %1$d</string>

    <string name="perform">Perform</string>
    <string name="deduction">Deduction</string>
    <string name="reset">Reset</string>

    <string name="routine_complete">Routine Complete!</string>
    <string name="deduction_stop">Stopped by deduction</string>
</resources>