<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp" />

    <TextView
        android:id="@+id/txtElement"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/element"
        android:textSize="22sp"
        android:gravity="center"
        android:background="#EEEEEE"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/box_bg">

        <TextView
            android:id="@+id/txtScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="16sp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="72sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnPerform"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:text="@string/perform"
            android:background="@drawable/button_bg"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="16dp"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="16dp"
            android:minHeight="0dp"
            android:text="@string/reset"
            android:background="@drawable/button_bg"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnDeduction"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/deduction"/>

    </LinearLayout>

</LinearLayout>
